--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,9 @@ body {
         max-height: 100vh !important;
     }
 }
+@media print {
+  .page-break {
+    page-break-after: always;
+    break-after: page;
+  }
+}
